zero-schema-macros/tests/ui/fail/27_collision_generated_types.stderr
error[E0255]: the name `TypeCollisionRef` is defined multiple times
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
3 | struct TypeCollisionRef;
  | ------------------------ previous definition of the type `TypeCollisionRef` here
...
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ `TypeCollisionRef` reimported here
  |
  = note: `TypeCollisionRef` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
9 | #[zero(crate = zs)] as OtherTypeCollisionRef
  |                     ++++++++++++++++++++++++

error[E0255]: the name `TypeCollisionMut` is defined multiple times
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
4 | struct TypeCollisionMut;
  | ------------------------ previous definition of the type `TypeCollisionMut` here
...
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ `TypeCollisionMut` reimported here
  |
  = note: `TypeCollisionMut` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
9 | #[zero(crate = zs)] as OtherTypeCollisionMut
  |                     ++++++++++++++++++++++++

error[E0255]: the name `TypeCollisionPatch` is defined multiple times
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
5 | struct TypeCollisionPatch;
  | -------------------------- previous definition of the type `TypeCollisionPatch` here
...
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ `TypeCollisionPatch` reimported here
  |
  = note: `TypeCollisionPatch` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
9 | #[zero(crate = zs)] as OtherTypeCollisionPatch
  |                     ++++++++++++++++++++++++++

error[E0255]: the name `TypeCollisionAccessError` is defined multiple times
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
6 | struct TypeCollisionAccessError;
  | -------------------------------- previous definition of the type `TypeCollisionAccessError` here
...
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ `TypeCollisionAccessError` reimported here
  |
  = note: `TypeCollisionAccessError` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
9 | #[zero(crate = zs)] as OtherTypeCollisionAccessError
  |                     ++++++++++++++++++++++++++++++++

error[E0255]: the name `TypeCollisionMutationError` is defined multiple times
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
7 | struct TypeCollisionMutationError;
  | ---------------------------------- previous definition of the type `TypeCollisionMutationError` here
8 |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ `TypeCollisionMutationError` reimported here
  |
  = note: `TypeCollisionMutationError` must be defined only once in the type namespace of this module
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
9 | #[zero(crate = zs)] as OtherTypeCollisionMutationError
  |                     ++++++++++++++++++++++++++++++++++

error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ expected 0 lifetime arguments
  |
note: struct defined here, with 0 lifetime parameters
 --> tests/ui/fail/27_collision_generated_types.rs:3:8
  |
3 | struct TypeCollisionRef;
  |        ^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^ expected 0 lifetime arguments
  |
note: struct defined here, with 0 lifetime parameters
 --> tests/ui/fail/27_collision_generated_types.rs:4:8
  |
4 | struct TypeCollisionMut;
  |        ^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^
  | |
  | expected `Result<TypeCollisionRef, ...>`, found `Result<TypeCollisionRef<'_>, ...>`
  | expected `Result<TypeCollisionRef, TypeCollisionAccessError>` because of return type
  |
  = note: `TypeCollisionRef<'_>` and `TypeCollisionRef` have similar names, but are actually distinct types
note: `TypeCollisionRef<'_>` is defined in module `crate::__zero_schema_support_typecollision_6404e85023cea0cb` of the current crate
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^
note: `TypeCollisionRef` is defined in module `crate` of the current crate
 --> tests/ui/fail/27_collision_generated_types.rs:3:1
  |
3 | struct TypeCollisionRef;
  | ^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^
  | |
  | expected `Result<TypeCollisionMut, ...>`, found `Result<TypeCollisionMut<'_>, ...>`
  | expected `Result<TypeCollisionMut, TypeCollisionAccessError>` because of return type
  |
  = note: `TypeCollisionMut<'_>` and `TypeCollisionMut` have similar names, but are actually distinct types
note: `TypeCollisionMut<'_>` is defined in module `crate::__zero_schema_support_typecollision_6404e85023cea0cb` of the current crate
 --> tests/ui/fail/27_collision_generated_types.rs:9:1
  |
9 | #[zero(crate = zs)]
  | ^^^^^^^^^^^^^^^^^^^
note: `TypeCollisionMut` is defined in module `crate` of the current crate
 --> tests/ui/fail/27_collision_generated_types.rs:4:1
  |
4 | struct TypeCollisionMut;
  | ^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)
